feat: refactorización api mid
