# swagger/swagger.yml
@@ -11,12 +11,12 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /token/addRol:
+  /rol/add:
     post:
       tags:
-      - token
+      - rol
       description: Recibe el usuario y el rol
-      operationId: TokenController.AddRol
+      operationId: RolController.AddRol
       parameters:
       - in: body
         name: body
@@ -28,19 +28,21 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.resUpdateRol'
+            $ref: '#/definitions/models.ResponseDTO'
+        "400":
+          description: El rol ya está asignado al usuario
         "404":
           description: not found resource
-  /token/deleteRol:
+  /rol/remove:
     post:
       tags:
-      - token
+      - rol
       description: Recibe el usuario y el rol
-      operationId: TokenController.DeleteRol
+      operationId: RolController.RemoveRol
       parameters:
       - in: body
         name: body
-        description: Usuario y rol a eliminar
+        description: Usuario y rol a remover
         required: true
         schema:
           $ref: '#/definitions/models.UpdateRol'
@@ -48,7 +50,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.resUpdateRol'
+            $ref: '#/definitions/models.ResponseDTO'
         "404":
           description: not found resource
   /token/emailToken:
@@ -92,7 +94,7 @@ paths:
         "404":
           description: not found resource
 definitions:
-  1852.0xc0003a31d0.false:
+  119.0xc000365b60.false:
     title: "false"
     type: object
   models.Payload:
@@ -115,6 +117,19 @@ definitions:
         type: array
         items:
           type: string
+  models.ResponseDTO:
+    title: ResponseDTO
+    type: object
+    properties:
+      data:
+        $ref: '#/definitions/119.0xc000365b60.false'
+      message:
+        type: string
+      status:
+        type: integer
+        format: int64
+      success:
+        type: boolean
   models.Token:
     title: Token
     type: object
@@ -149,20 +164,10 @@ definitions:
     properties:
       user:
         type: string
-  models.resUpdateRol:
-    title: resUpdateRol
-    type: object
-    properties:
-      Data:
-        $ref: '#/definitions/1852.0xc0003a31d0.false'
-      Message:
-        type: string
-      Status:
-        type: integer
-        format: int64
-      Success:
-        type: boolean
 tags:
 - name: token
   description: |
     TokenController operations for Token
+- name: rol
+  description: |
+    RolController operations for Rol
